Turning in FINAL

--- a/comparison.html
+++ b/comparison.html
@@ -44,7 +44,7 @@
                 <div class="panel panel-default">
                     <div class="panel-body">
 
-                            <h2>Latitude vs. X</h2>
+                            <h2>Latitude vs. (click any image below)</h2>
                             <hr>
                             <p class="p1">Click any plot for an in-depth analysis.</p>
 
