--- a/cities.html
+++ b/cities.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    
-  
+
+
     <link rel="stylesheet" href="styles.css">
     
-    <title>Weather Visualization Cloudiness </title>
-</head>
-<body>
+    <title>Weather Visualization Cities Data file  </title>
+  </head>
+
+<body style="background-color: rgb(184, 153, 153)">
+
 <table border="2" class="dataframe">
   <thead>
     <tr style="text-align: right;">
