--- a/cities.html
+++ b/cities.html
@@ -13,11 +13,16 @@
 
     <link rel="stylesheet" href="styles.css">
     
-    <title>Weather Visualization Cities Data file  </title>
   </head>
 
 <body style="background-color: rgb(184, 153, 153)">
-
+  <br>
+  (Click back button to go back!
+  <br>
+  <br>
+  <h2>Weather Visualization Cities Data file  </h2>
+  <br>
+  <br>
 <table border="2" class="dataframe">
   <thead>
     <tr style="text-align: right;">
