--- a/comparison.html
+++ b/comparison.html
@@ -38,6 +38,8 @@
                 </div>
         </div>      
     </nav>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Click Latitude above for homepage)</p>
+
     <div class = "container">
         <div class="row">                          
             <div class="col-md-12">
