--- a/temperature.html
+++ b/temperature.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>      
         </nav>
-
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Click Latitude above for homepage)</p>
     <div class = "container">
             <div class="row">                          
                 <div class="col-md-8">
@@ -60,7 +60,7 @@
                             <div class="panel-body">                                    
                                 <h2>Visualizations</h2>
                                 <hr>
-
+                                <div><p>Click on any image to zoom in</p></div>
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="temperature.html"><img class = "img img-responsive" src="Resources/assets/images/Fig1.png" style="width:100%" alt=""></a></div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="Resources/assets/images/Fig2.png" style="width:100%" alt=""></a></div>
